backend/k8s/catalog-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: ecommerce-catalog-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    app: catalog-service
  type: ClusterIP
