backend/k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: ecommerce-order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
    - port: 8004
      targetPort: 8004
  selector:
    app: order-service
  type: ClusterIP
