backend/k8s/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
        - name: payment-service
          image: ecommerce-payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8005
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  ports:
    - port: 8005
      targetPort: 8005
  selector:
    app: payment-service
  type: ClusterIP
